xidlc/src/driver/tests/snapshots/xidlc__driver__tests__fmt_fmt_gen__bitmask_def.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---

bitmask A {
};

bitmask A {
    A,
    B,
    C
};

bitmask A {
    A,
    B,
    C,

};
