xidlc/src/driver/tests/snapshots/xidlc__driver__tests__fmt_fmt_gen__bitset_def.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---

bitset A {
};

bitset A: B {
};

bitset A: B {
    bitfield<1> a;
    bitfield<1> a b c;
};
