xidlc/src/driver/tests/snapshots/xidlc__driver__tests__fmt_fmt_gen__module_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---

module A {
};

module B {
    const u8 a = 10;

    struct B;

};
