xidlc/src/driver/tests/snapshots/xidlc__driver__tests__fmt_fmt_gen__preproc.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---

#include "aaaa"

#ifdef BASIC

module A {
};

#program once

module A {
};

#endif
