xidlc/src/driver/tests/snapshots/xidlc__driver__tests__fmt_fmt_gen__struct_def.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---

struct A {
};

struct A {
    int32 a;
};

struct A {
    ::A::b a;
};

struct A: B {
};

struct _A {
};

struct _Custom {
    Inner var_inner;
};

struct HelloWorld {
    u8 a;
    u16 b[10];
    string c[10][20];
    sequence<u8> c;
    string<20> d;
    wstring<20> d;
    // fixed<1,2> d;
    any d;
};
