xidlc/src/driver/tests/snapshots/xidlc__driver__tests__fmt_fmt_gen__struct_derive.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---

@derive(Debug)
struct A {
};

@derive(Debug, Serialize)
struct A {
};
