xidlc/src/driver/tests/snapshots/xidlc__driver__tests__fmt_fmt_gen__template_module_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---

module MyTemplModule<typename T, struct S> {
};

module MyTemplModule<typename T, struct S, ::A a, A::B::C::D a> {
};

module MyTemplModule<typename T, struct S, long m> {
    alias MyTemplModule<T2, S2, m> MyTemplModule;
    interface Bar: A::Foo {
    };

};
